--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
           <meta name="keywords" content="vavr,wholesale,online,shopping,brass,alloy,uruli,anda,vaanal,dosa kallu">
           <meta name="description" content="this page is an online utensils wholesale shopping website.product that u place will be delivered to your company within 3-4 working days ">
           <meta name="author" content="sabari vikram">
-          <meta name="viewport" content="width-device-width, initial-scale-1, shrink-to-fit-no"/>
-          <link rel="stylesheet" href="D:\web dev\vavr veb\style.css" />
+          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+          <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
 
@@ -220,10 +220,10 @@
                 <ul class="parent">
                   <li id="menu11"> MENU
                        <ul class="child">
-                          <li id=galry><a href="#">Gallery</a></li>
-                          <li><a href="#">Product&nbsp;Info</a></li>
-                          <li><a href="#">Pricing&nbsp;Details</a></li>
-                          <li><a href="#">Order&nbsp;Product</a></li>
+                          <li><a href="#welcome">Product&nbsp;Info</a></li>
+                          <li id=galry><a href="#galleryheading">Gallery</a></li>
+                          <li><a href="#pricingheading">Pricing&nbsp;Details</a></li>
+                          <li><a href="#contact-form">Order&nbsp;Product</a></li>
                        </ul>
                   </li>
                   <li id="supbutton">SUPPORT</li>
@@ -251,6 +251,6 @@
 
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     </body>
 </html>
