--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <title>sampleform </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1, shrink-to-fit-no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/design.css">
   </head>
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="D:\web dev\vavr veb\home.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="D:\web dev\vavr web\home page\home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">about</a>
@@ -58,7 +58,7 @@
     <input type="password" class="form-control" id="inputPassword">
   </div>
 </div>
-<button type="button" class="btn btn-primary"> <a href="D:\web dev\vavr veb\home.html">Log in</a></button>
+<button type="button" class="btn btn-primary"> <a href="D:\web dev\vavr web\home page\home.html">Log in</a></button>
 </div>
 <hr class="dropdown-divider">
 
